# lab-azure-handson

./: .gitignore  README.md
_experiments/: 006-measure-latency.ipynb  007-comparison-of-vision-models.ipynb  008-ai-speech-using-dragon-hd.ipynb
agentic/: .env.example  001-simple-code-assistant.ipynb  002-agentic-loop.ipynb  003-memory-system.ipynb  004-agent-skill.ipynb
ai-agents/now-ai-agent/: Makefile  agent.py  app.py  pyproject.toml
ai-foundry/: .env.example  001-model-basic.ipynb  002-model-gpt5-optimization.ipynb  002-model-token-optimization.ipynb  003-rag-basic.ipynb  004-rag-doc-intelligence.ipynb  005-mcp.ipynb  006-fine-tuning-multimodal.ipynb  007-comparison-of-vision-models.ipynb  README.md  env.example
ai-foundry/resources/: KR_Merchants_Sample.csv  batch_inputs.jsonl  sft-llm-train.jsonl  sft-llm-val.jsonl  sft-vlm-train.jsonl  (+1 more)
graphrag/: .env.example  001-knowledge-graph-pipeline.ipynb  settings.yaml
iac/: README.md
machine-learning/: 001-aml-automl.ipynb  002-aml-fine-tuning-oss-chat-completions.ipynb  003-aml-pipeline_from_yaml.ipynb  004-aml-fine-tuning-object-detection.ipynb  env.example
ms-foundry/: .env.example  001-model-001-basic.ipynb  001-model-002-gpt5-optimization.ipynb  001-model-003-token-optimization.ipynb  001-model-004-mcp.ipynb  001-model-005-voice-basic.ipynb  001-model-005-voice-rag.ipynb  001-model-005-voice-realtime-session.ipynb  002-rag-001-ai-search-basic.ipynb  002-rag-002-ai-search-with-enrichment.ipynb  002-rag-003-graphrag.ipynb  003-agent-001-basic.ipynb  003-agent-002-workflow.ipynb  README.md  settings.yaml
(+22 files in other folders)
